# split-plug

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs
xtask/src/: main.rs
